# php-bloom

./: .editorconfig  .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  bloom.c  bloom.stub.php  bloom_algo.c  bloom_algo.h  bloom_arginfo.h  bloom_filter.c  bloom_filter.h  composer.json  config.m4  config.w32  php_bloom.h
.github/workflows/: build-and-test.yml  release-windows.yml
benchmarks/: PurePhpBloomFilter.php  README.md  bench.php  docker-compose.yml
benchmarks/mysql/: bench.php  schema.sql  seed.php
scripts/: bootstrap.sh  build.sh  clean.sh  common.sh  doctor.sh  gen-arginfo.sh  run.sh  test.sh
tests/: 001-api.phpt  002-hash.phpt  003-sizing.phpt  004-positions.phpt  005-filter-construction.phpt  006-filter-membership.phpt  007-import-export.phpt  008-stats.phpt  009-minfo.phpt  helpers.inc
